--- a/Data Cleaning/User_cleaning.ipynb
+++ b/Data Cleaning/User_cleaning.ipynb
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "#np.count_nonzero(np.where(bd>500))\n",
+    "#Plotting histogram for age of users\n",
     "bd=dataframe['bd']\n",
     "p=bd.hist(bins=np.max(bd)+1)\n",
     "p.set_xlim([0,100])\n",
@@ -91,6 +91,7 @@
     }
    ],
    "source": [
+    "#Plotting histogram for distribution of users in different cities\n",
     "city=dataframe['city']\n",
     "p=city.hist(bins=np.max(city)+1)\n",
     "p.set_xlabel(\"City\")\n",
@@ -127,6 +128,7 @@
     }
    ],
    "source": [
+    "#Comparitive plot showing ratio of male to female (in the form of histogram)\n",
     "gender=dataframe['gender']\n",
     "p=gender.hist()\n",
     "p.set_xlabel(\"Gender\")\n",
@@ -252,7 +254,7 @@
     }
    ],
    "source": [
-    "# extracting the users lying between 15 to 25 yrs\n",
+    "# Extracting the users lying between 18 to 28 yrs\n",
     "idx=[]\n",
     "bd=dataframe['bd']\n",
     "for i in enumerate(bd):\n",
@@ -293,6 +295,7 @@
    ],
    "source": [
     "# EDA of users from cleaned data\n",
+    "#Age distribution \n",
     "bd=dataframe['bd']\n",
     "p=bd.hist(bins=11)\n",
     "p.set_xlim([10,35])\n",
@@ -330,6 +333,7 @@
     }
    ],
    "source": [
+    "#Users distribution among cities\n",
     "city=dataframe['city']\n",
     "p=city.hist(bins=22)\n",
     "p.set_xlabel(\"City\")\n",
@@ -366,6 +370,7 @@
     }
    ],
    "source": [
+    "#Ratio of male to female\n",
     "gender=dataframe['gender']\n",
     "p=gender.hist()\n",
     "p.set_xlabel(\"Gender\")\n",
@@ -379,7 +384,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe.to_csv(\"cleaned_userdata.csv\")"
+    "#Saving cleaned data as cleaned_userdata.csv\n",
+    "#This csv contain cleaned data of user in the age range of 18 to 28 without any Nan entries\n",
+    "dataframe.to_csv(\"Final_cleaned_members.csv\")"
    ]
   },
   {
