--- a/DataCleaning/processing_data_updated.ipynb
+++ b/DataCleaning/processing_data_updated.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -25,9 +25,9 @@
     }
    ],
    "source": [
-    "dataframe=pd.read_csv('final_users.csv')\n",
-    "dataframe.head()\n",
-    "print(len(dataframe))"
+    "dataframeu=pd.read_csv('final_users.csv')\n",
+    "dataframeu.head()\n",
+    "print(len(dataframeu))"
    ]
   },
   {
@@ -78,140 +78,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "users=dataframe['msno'].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <th>msno</th>\n",
-       "      <th>song_id</th>\n",
-       "      <th>source_system_tab</th>\n",
-       "      <th>source_screen_name</th>\n",
-       "      <th>source_type</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16</td>\n",
-       "      <td>34</td>\n",
-       "      <td>RPLdWVYe6joZEnv9TzljsdCWMtKopKpRXk1hKAnQQCQ=</td>\n",
-       "      <td>K2jkXlozk/+HPjs1RyDlBUHJx2Ky+ITavwBXPcFqtHY=</td>\n",
-       "      <td>my library</td>\n",
-       "      <td>Local playlist more</td>\n",
-       "      <td>local-library</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>61</td>\n",
-       "      <td>167</td>\n",
-       "      <td>LGIeu7rj6KryPWev2nr5g807ZPtw4b59wqDn5jighcw=</td>\n",
-       "      <td>zHqZ07gn+YvF36FWzv9+y8KiCMhYhdAUS+vSIKY3UZY=</td>\n",
-       "      <td>discover</td>\n",
-       "      <td>Online playlist more</td>\n",
-       "      <td>song-based-playlist</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>63</td>\n",
-       "      <td>170</td>\n",
-       "      <td>LGIeu7rj6KryPWev2nr5g807ZPtw4b59wqDn5jighcw=</td>\n",
-       "      <td>IKMFuL0f5Y8c63Hg9BXkeNJjE0z8yf3gMt/tOxF4QNE=</td>\n",
-       "      <td>discover</td>\n",
-       "      <td>Online playlist more</td>\n",
-       "      <td>song-based-playlist</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>64</td>\n",
-       "      <td>171</td>\n",
-       "      <td>LGIeu7rj6KryPWev2nr5g807ZPtw4b59wqDn5jighcw=</td>\n",
-       "      <td>MtFK4NN8Kv1k/xPA3wb8SQaP/jWee52FAaC1s9NFsU4=</td>\n",
-       "      <td>discover</td>\n",
-       "      <td>Online playlist more</td>\n",
-       "      <td>song-based-playlist</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>68</td>\n",
-       "      <td>176</td>\n",
-       "      <td>LGIeu7rj6KryPWev2nr5g807ZPtw4b59wqDn5jighcw=</td>\n",
-       "      <td>9YYrODwrXpDcCjOJypHROv3f5z40y11QlmgQjmzp2vQ=</td>\n",
-       "      <td>discover</td>\n",
-       "      <td>Online playlist more</td>\n",
-       "      <td>song-based-playlist</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Unnamed: 0  Unnamed: 0.1                                          msno  \\\n",
-       "0          16            34  RPLdWVYe6joZEnv9TzljsdCWMtKopKpRXk1hKAnQQCQ=   \n",
-       "1          61           167  LGIeu7rj6KryPWev2nr5g807ZPtw4b59wqDn5jighcw=   \n",
-       "2          63           170  LGIeu7rj6KryPWev2nr5g807ZPtw4b59wqDn5jighcw=   \n",
-       "3          64           171  LGIeu7rj6KryPWev2nr5g807ZPtw4b59wqDn5jighcw=   \n",
-       "4          68           176  LGIeu7rj6KryPWev2nr5g807ZPtw4b59wqDn5jighcw=   \n",
-       "\n",
-       "                                        song_id source_system_tab  \\\n",
-       "0  K2jkXlozk/+HPjs1RyDlBUHJx2Ky+ITavwBXPcFqtHY=        my library   \n",
-       "1  zHqZ07gn+YvF36FWzv9+y8KiCMhYhdAUS+vSIKY3UZY=          discover   \n",
-       "2  IKMFuL0f5Y8c63Hg9BXkeNJjE0z8yf3gMt/tOxF4QNE=          discover   \n",
-       "3  MtFK4NN8Kv1k/xPA3wb8SQaP/jWee52FAaC1s9NFsU4=          discover   \n",
-       "4  9YYrODwrXpDcCjOJypHROv3f5z40y11QlmgQjmzp2vQ=          discover   \n",
-       "\n",
-       "     source_screen_name          source_type  target  \n",
-       "0   Local playlist more        local-library       0  \n",
-       "1  Online playlist more  song-based-playlist       1  \n",
-       "2  Online playlist more  song-based-playlist       1  \n",
-       "3  Online playlist more  song-based-playlist       1  \n",
-       "4  Online playlist more  song-based-playlist       1  "
+       "7177"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "users=dataframe['msno'].tolist()\n",
+    "len(users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5688\n"
+     ]
+    }
+   ],
+   "source": [
     "dataframe=pd.read_csv('final_train.csv')\n",
-    "dataframe.head()"
+    "dataframe.head()\n",
+    "ulist = np.unique(np.array(dataframe.msno.tolist()))\n",
+    "dataframeu = dataframeu.loc[dataframeu['msno'].isin(ulist)]\n",
+    "print(len(dataframeu))\n",
+    "dataframeu.to_csv('final_users.csv')"
    ]
   },
   {
